test_case/rust-lang_rust/52175_406339167_2.rs
\n"},"level":"error","spans":[{"file_name":"<vec macros>","byte_start":115,"byte_end":162,"line_start":3,"line_end":3,"column_start":1,"column_end":48,"is_primary":true,"text":[{"text":"< [ _ ] > :: into_vec ( box [ $ ( $ x ) , * ] ) ) ; ( $ ( $ x : expr , ) * )","highlight_start":1,"highlight_end":48}],"label":"temporary value does not live long enouart":568,"byte_end":569,"line_start":14,"line_end":14,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    x.use_mut();","highlight_start":5,"highlight_end":6}],"label":"borrow later used here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0597]: borrowed value does not live long enough\n  --> /checkout/src/test/ui/lifetimes/borrowck-let-suggestion.rs:12:17\n   |\nLL |     let mut x = vec![1].iter();\n   |                 ^^^^^^^       - temporary value only lives until here\n   |                 |\n   |                 temporary value does not live long enough\nLL |     //~^ ERROR borrowed value does not live long enough\nLL |     x.use_mut();\n   |     - borrow later used here\n   |\n   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)\n\n"}
[00:47:29] {"message":"aborting due to previous error","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to previous error\n\n"}
[00:47:29] {"message":"For more information about this error, try `rustc --explain E0597`.","code":null,"level":"","spans":[],"children":[],"rendered":"For more information about this error, try `rustc --explain E0597`.\n"}
[00:47:29] ------------------------------------------
[00:47:29] 
[00:47:29] thread '[ui (nll)] ui/lifetimes/borrowck-let-suggestion.rs' panicked at 'explicit panic', tools/compiletest/src/runtest.rs:3139:9
[00:47:29] note: Run with `RUST_BACKTRACE=1` for a backtrace.
[00:47:29] note: Run with `RUST_BACKTRACE=1` for a backtrace.
[00:47:29] 
[00:47:29] ---- [ui (nll)] ui/s"suggestion_applicability":null,"expansion":null},"macro_decl_name":"vec!","def_site_span":{"file_name":"<vec macros>","byte_start":0,"byte_end":222,"line_start":1,"line_end":4,"column_start":1,"column_end":31,"is_primary":false,"text":[{"text":"( $ elem : expr ; $ n : expr ) => (","highlight_start":1,"highlight_end":36},{"text":"$ crate :: vec :: from_elem ( $ elem , $ n ) ) ; ( $ ( $ x : expr ) , * ) => (","highlight_start":1,"highlight_end":79},{"text":"< [ _ ] > :: into_vec ( box [ $ ( $ x ) , * ] ) ) ; ( $ ( $ x : expr , ) * )","highlight_start":1,"highlight_end":77},{"text":"=> ( vec ! [ $ ( $ x ) , * ] )","highlight_start":1,"highlight_end":31}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}}},{"file_name":"/checkout/src/test/ui/span/slice-borrow.rs","byte_start":693,"byte_end":694,"line_start":19,"line_end":19,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    }","highlight_start":5,"highlight_end":6}],"label":"temporary value only lives until here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/span/slice-borrow.rs","byte_start":699,"byte_end":700,"line_start":20,"line_end":20,"column_start":5,"column_end":6,"is_primary":false,"text":[{"text":"    y.use_ref();","highlight_start":5,"highlight_end":6}],"label":"borrow later used here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0597]: borrowed value does not live long enough\n  --> /checkout/src/test/ui/span/slice-borrow.rs:16:28\n   |\nLL |         let x: &[isize] = &v
